fix: Increase z-index of sidebar to make sure errant header border doesn't encroach (#358)

--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -37,6 +37,7 @@ $sidebar-width-base: 230px;
   flex-direction: column;
   background-color: $color-sidebar-background;
   position: relative;
+  z-index: 2;
 
   &:after {
     content: '';
